@@ -49,6 +49,9 @@ Release 1.1 Start 14/02/2021
 26. qgetpwgr.c: fixed incorrect size passed to alloc_re()
 - 10/07/2021
 27. qgetpwgr.c: added qgetserv.. functions to read /etc/services
+11/07/2021
+28. envdir.c: set variables from .dir first to prevent .dir from overriding
+    main
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
